--- a/Taxi Calculator/app/src/main/res/layout/main.xml
+++ b/Taxi Calculator/app/src/main/res/layout/main.xml
@@ -1,4 +1,4 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:background="#FFFFFF">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:background="#FFFFFF" android:fitsSystemWindows="true">
 	<LinearLayout android:layout_width="fill_parent" android:orientation="vertical" android:layout_height="wrap_content" android:layout_weight="1" android:fillViewport="true">
 		<TextView android:layout_width="fill_parent" android:layout_height="40dp" android:background="@drawable/barra" android:textSize="20sp" android:textColor="#FFFFFF" android:gravity="center|center" android:scaleType="fitXY" android:id="@+id/titulo"/>
 		<RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent" >
